# unraid_parity_scripter

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/actions/check-version/: action.yaml
.github/actions/get-version/: action.yaml
.github/actions/package-app/: action.yaml
.github/actions/update-version/: action.yaml
.github/workflows/: ci.yaml  pre-release.yaml  release.yaml  tagged-release.yaml
parity_scripter/: __init__.py  about.py  containers.py  main.py  monitor.py  parity_monitor.py  unraid.py  utils.py
src/parity_scripter/: about.py  main.py  utils.py
